Bug 124457 - FILESAVE: PPTX animation timing property: Repeat not saved
Summary: FILESAVE: PPTX animation timing property: Repeat not saved
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy (NISZ)
URL:
Whiteboard: target:7.2.0
Keywords:
: 124458 (view as bug list)
Depends on:
Blocks: Object-Animations PPTX-Animations
  Show dependency treegraph
 
Reported: 2019-03-31 19:09 UTC by Luke
Modified: 2021-05-28 07:32 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Repeat Property of Native PowerPoint also lost on Roundtrip (26.45 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2019-03-31 19:09 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2019-03-31 19:09:22 UTC
Created attachment 150434 [details]
Repeat Property of Native PowerPoint also lost on Roundtrip

The animation timing property, Repeat, is not exported to PPTX.

Steps to Reproduce:
1. Open attachment 91249 [details]
2. Save as PPTX
3. Close and reopen PPTX
4. Animation -> Shape 3 -> Options -> Timing 


Expected Results:
1. Repeat = 3

Actual Results:
1. Repeat = none
Comment 1 Luke 2019-03-31 19:12:49 UTC
*** Bug 124458 has been marked as a duplicate of this bug. ***
Comment 2 Xisco Faulí 2019-05-06 17:02:51 UTC
Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: ddea172792d13516ff7e0dd43f1f78b74ade8914
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 3 NISZ LibreOffice Team 2021-01-19 13:40:40 UTC
Still a problem in:

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 2081eac430ac69619149e44b453a2d7dda41fc83
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL

bug #120690 shows an example file where this is also lost on PPTX fileopen.
Comment 4 Timur 2021-01-20 08:45:04 UTC Comment hidden (obsolete)
Comment 5 Commit Notification 2021-05-10 09:40:59 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c89a7e2d900da5a6bded573f6dcff04c7be98339

tdf#124457 PPTX animation: export repeatCount

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2021-05-28 07:32:18 UTC
Repeat=3

Verified in
Version: 7.2.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: 033fdd5aab3c44af26c7b53393afd2a7a8a056cd
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: threaded