tdf#124457 PPTX export: animation timing property "Repeat" is not exported

Change-Id: Iac0dd10007c3e48f06c131d61671e1f78cad45a5